# aurora-tv

./: .gitmodules  CMakeLists.txt  README.md
src/app/: CMakeLists.txt  app.c  app_settings.c  app_settings.h
src/app/hid_passthrough/: CMakeLists.txt  ctm_bridge_protocol.h  ctm_hid.c  ctm_hid.h  ctm_transport.c  ctm_transport.h  enet_transport.c  enet_transport.h  hid_device.c  hid_device.h  hid_passthrough_manager.c  hid_passthrough_manager.h  hid_transport.c  hid_transport.h
src/app/input/: input_event.c  input_gamepad.c
src/app/lvgl/font/: lv_symbol_def_replace.h  material_icons_regular_symbols.h
src/app/lvgl/input/: lv_drv_sdl_key.c  lv_sdl_drv_wheel_input.c
src/app/res/tools/: package-lock.json  package.json
src/app/stream/: session.c  session.h  session_events.c  session_priv.h  session_worker.c
src/app/stream/audio/: CMakeLists.txt  microphone_capture.c  microphone_capture.h  session_audio.c
src/app/stream/connection/: session_connnection.c
src/app/stream/input/: CMakeLists.txt  keyboard_input.c  keyboard_input.h  session_gamepad.c  session_input.c  session_input.h  session_keyboard.c  session_mouse.c  session_pointer_gesture.c  session_pointer_gesture.h
src/app/stream/video/: session_video.c  session_video.h
src/app/ui/: CMakeLists.txt  root.c
src/app/ui/launcher/: apps.controller.c  launcher.controller.c  launcher.controller.h  launcher.view.c  server.popup.c  server.popup.h
src/app/ui/settings/: settings.controller.c  settings.controller.h  settings.view.c
src/app/ui/streaming/: hid_passthrough_panel.c  hid_passthrough_panel.h  (+5 more)
(+39 files in other folders)
